--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
+    "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
     "next": "15.3.1",
     "react": "^19.0.0",
