--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@google/genai": "^0.10.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
     "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.14.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
